html and js updates

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <head>
+        <h1 id="name">
+            ${data.name}
+            <p id="location">${data.loaction}</p>
+        </h1>
+
+        <p id="Bio">${data.bio}</p>
+    </head>
+
+    <container id="contact-info">
+        
+        <p id="linkedin">${data.linkedin}</p>
+        <p id="github">${data.github}</p>
+
+    </container>
     
 </body>
 </html>
